Update TestimonialModal styles and fixes z-index
This commit modifies the Testimonial Modal by changing the class of the close button to "button-modal" and adjusting its styling in the CSS. It also fixes a potential overlay issue by changing the z-index value in Header.scss from 9999 to 99. Fixes have been applied to box-shadow and z-index properties to ensure proper display and function.

--- a/src/components/TestimonialModal/TestimonialModal.scss
+++ b/src/components/TestimonialModal/TestimonialModal.scss
@@ -11,6 +11,7 @@
   opacity: 0;
   pointer-events: none;
   transition: 0.5s;
+  z-index: 100;
 }
 
 .modal.active {
@@ -22,7 +23,7 @@
   width: 55vw;
   border-radius: 12px;
   background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.35) 0  5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
   transform: scale(0.5);
   transition: 0.4s;
   padding: 35px;
@@ -43,3 +44,13 @@
   font-weight: bold;
 }
 
+.button-modal {
+  padding: 5px 10px;
+  background-color: var(--main-color);
+  color: var(--white-color);
+  border-radius: 5px;
+  transition: color 0.3s ease 0s;
+  &:hover{
+    color: var(--hover-bg-color);
+  }
+}
